feat: RA-78 Refactor LedgerBlockServiceImpl